<resources>
    <string name="app_name">Lyf</string>
    <string name="capture">Capture</string>
    <string name="database">Database</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_specific">Map</string>
    <string name="title_activity_database_plants">DatabasePlants</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activity2">activity2</string>
    <string name="btn1">btn1</string>
    <string name="titleApp_name">Lyf</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>

    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="AppLogoDesc">App Logo in Log In Screen</string>
    <string name="Log_InDesc">Log In Input EditText</string>
    <string name="PasswordDesc">Password Input EditText</string>

    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>

    <string name="RePassword">Re-enter Password</string>

    <string name="CreateAccount">Create Account</string>
    <string name="AlreadyExistingUser">Already a member? Login</string>


    <!-- activity_tutorial.xml -->
    <string name="Instructions">Instructions\nfor Identifying</string>
    <string name="instruct_1">Pluck leaf from plant to identify.</string>
    <string name="instruct_2">Put leaf in palm of hand</string>
    <string name="instruct_3">Press capture button to identify</string>
    <string name="imageView">Not yet known</string>
    <string name="imageButton">Not yet known</string>
    <!-- end of activity_tutorial.xml -->

    <!-- activity_about.xml -->
    <string name="AboutImageLogo">The Leaf Logo of Lyf</string>
    <string name="AboutLyf">About</string>
    <string name="abouts">The quick brown fox jumps over the lazy dog.\nThe quick brown fox jumps over the lazy dog.</string>
    <!-- end of activity_tutorial.xml -->

    <!-- activity_result -->
    <string name="ResultTitle">Result</string>
    <string name="PlantNameResult">Plant Name</string>
    <string name="FirstImageResult">First Image Result</string>
    <string name="ButtonBesidePlantName">Button image beside plant name</string>
    <string name="SecondImageResult">Second Image Result</string>
    <string name="imageButtonInResult">Not yet known</string>
    <!-- end of activity_result -->

</resources>
