<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <TextView
            android:id="@+id/activity_tutorial_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#28544B"
            android:fontFamily="@font/cocogoosefont"
            android:text="@string/Instructions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            tools:targetApi="o"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"/>

        <TextView
            android:id="@+id/instruct_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandonfont"
            android:text="@string/instruct_1"
            android:textColor="#000000"
            android:textSize="26sp"
            android:gravity="center"
            tools:targetApi="o"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/instruct_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandonfont"
            android:text="@string/instruct_2"
            android:textColor="#000000"
            android:textSize="26sp"
            android:gravity="center"
            tools:targetApi="o"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/instruct_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandonfont"
            android:text="@string/instruct_3"
            android:textColor="#000000"
            android:textSize="26sp"
            android:gravity="center"
            tools:targetApi="o"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                app:srcCompat="@drawable/capture"
                android:contentDescription="@string/imageView" />

            <ImageButton
                android:id="@+id/btnCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="15dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/check"
                android:contentDescription="@string/imageButton"/>
        </FrameLayout>

</LinearLayout>