<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lyf_spwp"
    android:orientation="vertical"
    tools:context=".About">

    <ImageView
        android:id="@+id/aboutLogo"
        android:src="@drawable/lyf_about_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/AboutImageLogo" />

    <TextView
    android:id="@+id/aboutTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/AboutLyf"
    android:gravity="center"
    android:fontFamily="@font/cocogoosenarrow_semilight"
    android:textColor="@color/white"
    android:textSize="35sp"
    android:paddingBottom="25dp"/>

    <TextView
        android:id="@+id/abouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abouts"
        android:gravity="center"
        android:fontFamily="@font/brandonfont"
        android:textColor="@color/white"
        android:textSize="26sp" />


</LinearLayout>