<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/lyf_bg_solid">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/lyfbrand"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/AppLogoDesc"/>

        <!--  First Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:hint="@string/FirstName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!--  Middle Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtMname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:hint="@string/MiddleName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!--  Middle Name Label -->

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtLname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:hint="@string/LastName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:hint="@string/Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:hint="@string/Username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="font/cocogoosecondensed_ultralight"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- RePassword Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/repasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="font/cocogoosecondensed_ultralight"
                android:hint="@string/RePassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shapelogin"
            android:fontFamily="@font/cocogoosecondensed_ultralight"
            android:padding="12dp"
            android:text="@string/CreateAccount"
            android:textColor="@color/white" />

        <TextView android:id="@+id/linkLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/AlreadyExistingUser"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/cocogoosecondensed_ultralight"/>

    </LinearLayout>
</ScrollView>